[package]
name = "container-rs"
version = "0.1.0"
authors = ["Nazım Can Altınova <canaltinova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.17.0"
log = "0.4"
pretty_env_logger = "0.4"
clap = "2.33"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.8.1"
hex = "0.4.2"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tempfile = "3.1.0"